UnityJoyShockLibrary.cs


    [DllImport(DLL, CallingConvention = CC)]
    public static extern int JslGetTouchId(int deviceId, [MarshalAs(UnmanagedType.I1)] bool secondTouch);
    [DllImport(DLL, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool JslGetTouchDown(int deviceId, [MarshalAs(UnmanagedType.I1)] bool secondTouch);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern float JslGetTouchX(int deviceId, [MarshalAs(UnmanagedType.I1)] bool secondTouch);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern float JslGetTouchY(int deviceId, [MarshalAs(UnmanagedType.I1)] bool secondTouch);

    // ---------------------------------------------------------------
    // Device characteristics
    // ---------------------------------------------------------------

    [DllImport(DLL, CallingConvention = CC)]
    public static extern float JslGetStickStep(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern float JslGetTriggerStep(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern float JslGetPollRate(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern float JslGetTimeSinceLastUpdate(int deviceId);

    // ---------------------------------------------------------------
    // Calibration
    // ---------------------------------------------------------------

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslResetContinuousCalibration(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslStartContinuousCalibration(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslPauseContinuousCalibration(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetAutomaticCalibration(int deviceId, [MarshalAs(UnmanagedType.I1)] bool enabled);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslGetCalibrationOffset(int deviceId, ref float xOffset, ref float yOffset, ref float zOffset);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetCalibrationOffset(int deviceId, float xOffset, float yOffset, float zOffset);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern JSL_AUTO_CALIBRATION JslGetAutoCalibrationStatus(int deviceId);

    // ---------------------------------------------------------------
    // Callbacks
    // ---------------------------------------------------------------

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetCallback(EventCallback callback);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetTouchCallback(TouchCallback callback);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetConnectCallback(ConnectCallback callback);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDisconnectCallback(DisconnectCallback callback);

    // ---------------------------------------------------------------
    // Device info / colour / rumble
    // ---------------------------------------------------------------

    [DllImport(DLL, CallingConvention = CC)]
    public static extern JSL_SETTINGS JslGetControllerInfoAndSettings(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern int JslGetControllerType(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern int JslGetControllerSplitType(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern int JslGetControllerBodyColour(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern int JslGetControllerLeftGripColour(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern int JslGetControllerRightGripColour(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern int JslGetControllerButtonColour(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetLightColour(int deviceId, int colour);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetRumble(int deviceId, int smallRumble, int bigRumble);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetPlayerNumber(int deviceId, int number);

    // ---------------------------------------------------------------
    // DualSense (DS5) adaptive trigger effects
    // position/strength/frequency parameters use raw byte ranges -- see the
    // XML doc comments in JoyShockLibrary.h for each function's valid ranges
    // ---------------------------------------------------------------

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDS5TriggersOff(int deviceId, EDS5AffectedTriggers affectedTriggers);

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDS5TriggersFeedback(int deviceId, EDS5AffectedTriggers affectedTriggers,
        byte position, byte strength);

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDS5TriggersWeapon(int deviceId, EDS5AffectedTriggers affectedTriggers,
        byte startPosition, byte endPosition, byte strength);

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDS5TriggersVibration(int deviceId, EDS5AffectedTriggers affectedTriggers,
        byte position, byte amplitude, byte frequency);

    // JslSetDS5TriggersMultiPosFeedback intentionally not bound -- see file header comment.

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDS5TriggersSlopeFeedback(int deviceId, EDS5AffectedTriggers affectedTriggers,
        byte startPosition, byte endPosition, byte startStrength, byte endStrength);

    // JslSetDS5TriggersMultiPosVibration intentionally not bound -- see file header comment.

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDS5TriggersBow(int deviceId, EDS5AffectedTriggers affectedTriggers,
        byte startPosition, byte endPosition, byte strength, byte snapForce);

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDS5TriggersGalloping(int deviceId, EDS5AffectedTriggers affectedTriggers,
        byte startPosition, byte endPosition, byte firstFoot, byte secondFoot, byte frequency);

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetDS5TriggersMachine(int deviceId, EDS5AffectedTriggers affectedTriggers,
        byte startPosition, byte endPosition, byte amplitudeA, byte amplitudeB, byte frequency, byte period);

    // ---------------------------------------------------------------
    // Joy-Con / Switch controller HD Rumble
    // ---------------------------------------------------------------

    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslEnableHDRumble(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslDisableHDRumble(int deviceId);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetHDRumble(int deviceId, float lowFreq, float lowAmpli, float highFreq, float highAmpli);
    [DllImport(DLL, CallingConvention = CC)]
    public static extern void JslSetHDRumbleLR(int deviceId,
        float lowFreqL, float lowAmpliL, float highFreqL, float highAmpliL,
        float lowFreqR, float lowAmpliR, float highFreqR, float highAmpliR);
}
